fix: fixed the issue with UI being too large on smaller devices

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -65,8 +65,13 @@ img {
 }
 
 .button__group span {
-  font-size: 1rem !important;
-  font-weight: 100 !important;
+  font-size: 1rem;
+  font-weight: 100;
+}
+
+.category-selection {
+  font-size: 10rem;
+  font-weight: 600;
 }
 
 .validate {
@@ -144,7 +149,7 @@ img {
 
 .main__left h2 {
   color: var(--clr-dark);
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 300;
 }
 
@@ -153,7 +158,7 @@ img {
   }
 
 .main__left h3 {
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 600;
   color: var(--clr-dark);
 }
@@ -223,7 +228,7 @@ body.main-light .progress-display {
   font-weight: 100;
 
   .bold {
-    font-weight: 500;
+    font-weight: 600;
   }
 }
 
@@ -494,6 +499,10 @@ body.main-light .progress-display {
 .main__left {
   width: 600px;
   margin: 0;
+
+  h2, h3 {
+    font-size: 4rem;
+  }
 }
 
 .category-description {
